module(
  name = "everchanging",
)

bazel_dep(name = "abseil-py", version = "2.1.0")
bazel_dep(name = "protobuf", version = "29.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.12",
)
